--- a/frontend/index.html
+++ b/frontend/index.html
@@ -6,11 +6,11 @@
     <title>Shared Experiences</title>
     <meta name="description" content="Share your experience anonymously and instantly see how many others relate." />
     <meta name="robots" content="index, follow" />
-    <link rel="canonical" href="%VITE_SITE_URL%" />
+    <link rel="canonical" href="http://localhost:5173" />
     <meta property="og:title" content="Shared Experiences" />
     <meta property="og:description" content="Share your experience anonymously and instantly see how many others relate." />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="%VITE_SITE_URL%" />
+    <meta property="og:url" content="http://localhost:5173" />
     <meta name="twitter:card" content="summary" />
     <meta name="twitter:title" content="Shared Experiences" />
     <meta name="twitter:description" content="Share your experience anonymously and instantly see how many others relate." />
@@ -24,10 +24,10 @@
         "@context": "https://schema.org",
         "@type": "WebSite",
         "name": "Shared Experiences",
-        "url": "%VITE_SITE_URL%",
+        "url": "http://localhost:5173",
         "potentialAction": {
           "@type": "SearchAction",
-          "target": "%VITE_SITE_URL%/?q={search_term_string}",
+          "target": "http://localhost:5173/?q={search_term_string}",
           "query-input": "required name=search_term_string"
         }
       }
